syntax = "proto3";

package shortener;

option go_package = "/proto;proto";

service Shortener {
  rpc CreateShortURL(CreateShortURLRequest) returns (ShortURLResponse);
  rpc CreateShortURLJSON(CreateShortURLRequest) returns (ShortURLResponse);
  rpc CreateShortURLBatch(CreateShortURLBatchRequest) returns (CreateShortURLBatchResponse);
  rpc GetOriginalURL(GetOriginalURLRequest) returns (OriginalURLResponse);
  rpc GetUserURLs(UserIDRequest) returns (UserURLsResponse);
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

// Messages

message CreateShortURLRequest {
  string url = 1;
}

message ShortURLResponse {
  string result = 1;
}

message CreateShortURLBatchRequest {
  repeated BatchURLData urls = 1;
  string user_id = 2;
}

message CreateShortURLBatchResponse {
  repeated BatchURLDataResponse urls = 1;
}

message BatchURLData {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchURLDataResponse {
  string correlation_id = 1;
  string short_url = 2;
}

message GetOriginalURLRequest {
  string short_url = 1;
}

message OriginalURLResponse {
  string original_url = 1;
}

message UserIDRequest {
  string user_id = 1;
}

message UserURLsResponse {
  repeated UserURL urls = 1;
}

message UserURL {
  string short_url = 1;
  string original_url = 2;
}

message DeleteUserURLsRequest {
  string user_id = 1;
  repeated string short_url_ids = 2;
}

message DeleteUserURLsResponse {
  bool success = 1;
}

message PingRequest {}

message PingResponse {
  string status = 1;
}

message GetStatsRequest {}

message GetStatsResponse {
  int64 urls = 1;
  int64 users = 2;
}
